crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__ca-xx.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "CA",
                  "type": "text"
                }
              ],
              "raw_text": "CA",
              "span": {
                "end": 131,
                "start": 129
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "span": {
                "end": 135,
                "start": 132
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "use",
                  "type": "text"
                }
              ],
              "raw_text": "use",
              "span": {
                "end": 139,
                "start": 136
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "xx",
                  "type": "text"
                }
              ],
              "raw_text": "xx",
              "span": {
                "end": 142,
                "start": 140
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "XX",
                  "type": "text"
                }
              ],
              "raw_text": "XX",
              "span": {
                "end": 147,
                "start": 145
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 154,
                "start": 151
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "even",
                  "type": "text"
                }
              ],
              "raw_text": "even",
              "span": {
                "end": 159,
                "start": 155
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "XXX",
                  "type": "text"
                }
              ],
              "raw_text": "XXX",
              "span": {
                "end": 163,
                "start": 160
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    }
  }
}
