crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__capitals-prefixes.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "MacDonald",
                  "type": "text"
                }
              ],
              "raw_text": "MacDonald",
              "span": {
                "end": 163,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "McDonald",
                  "type": "text"
                }
              ],
              "raw_text": "McDonald",
              "span": {
                "end": 173,
                "start": 165
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "DeDonald",
                  "type": "text"
                }
              ],
              "raw_text": "DeDonald",
              "span": {
                "end": 183,
                "start": 175
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "LaDonald",
                  "type": "text"
                }
              ],
              "raw_text": "LaDonald",
              "span": {
                "end": 193,
                "start": 185
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "LasDonald",
                  "type": "text"
                }
              ],
              "raw_text": "LasDonald",
              "span": {
                "end": 204,
                "start": 195
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "LosDonald",
                  "type": "text"
                }
              ],
              "raw_text": "LosDonald",
              "span": {
                "end": 215,
                "start": 206
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "SanDonald",
                  "type": "text"
                }
              ],
              "raw_text": "SanDonald",
              "span": {
                "end": 226,
                "start": 217
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "StDonald",
                  "type": "text"
                }
              ],
              "raw_text": "StDonald",
              "span": {
                "end": 236,
                "start": 228
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
