crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__caps.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I_B_M",
                  "type": "text"
                }
              ],
              "raw_text": "I_B_M",
              "span": {
                "end": 159,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Foo_Bar",
                  "type": "text"
                }
              ],
              "raw_text": "Foo_Bar",
              "span": {
                "end": 167,
                "start": 160
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Foo-Bar",
                  "type": "text"
                }
              ],
              "raw_text": "Foo-Bar",
              "span": {
                "end": 175,
                "start": 168
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Old_McDonald",
                  "type": "text"
                }
              ],
              "raw_text": "Old_McDonald",
              "span": {
                "end": 188,
                "start": 176
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "O'Reilly",
                  "type": "text"
                }
              ],
              "raw_text": "O'Reilly",
              "span": {
                "end": 197,
                "start": 189
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "D'Artagnan",
                  "type": "text"
                }
              ],
              "raw_text": "D'Artagnan",
              "span": {
                "end": 208,
                "start": 198
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
